package com.javadesignpatterns;

/*
PROJECT NAME : design-patterns-java-maven
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/19/2021 1:47 AM
*/

public class Hunter extends PartyMemberBase{
    @Override
    public String toString() {
        return this.getClass().getSimpleName();
    }
}
