package com.javadesignpatterns;

/*
PROJECT NAME : design-patterns-java-maven
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/19/2021 1:26 AM
*/

public interface PartyMember {
    public void joinedParty(Party party);
    public void partyAction(Action action);
    public void act(Action action);
}
