package com.javadesignpatterns;

/*
PROJECT NAME : design-patterns-java-maven
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/19/2021 1:33 AM
*/

public class Rogue extends PartyMemberBase {
    @Override
    public String toString() {
        return "Rogue";
    }
}
